<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_viewpager"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_hour"
        android:layout_margin="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_3hour_viewpager"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_hour"
        android:layout_margin="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_hour_viewpager"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/button_3hour"
        app:layout_constraintStart_toEndOf="@+id/button_review"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_hour"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/notForecaHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/not_hour_viewpager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler3Hour"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_hour"
        android:layout_marginTop="16dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_hour"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_foreca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@drawable/d000"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/text_foreca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                tools:text="преимущественно ясно и временами снег"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/temp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/temp_image_viewpager" />
            </FrameLayout>

            <TextView
                android:id="@+id/maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Макс. темп.: +10℃, ощущается как: +15℃" />

            <TextView
                android:id="@+id/minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Мин. темп.: -10℃, ощущается как: -15℃"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/rain"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/rain_image_viewpager" />
            </FrameLayout>

            <TextView
                android:id="@+id/precipAccum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Уровень осадков: 20 мм (вода), 20 мм (снег)" />

            <TextView
                android:id="@+id/precipProb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Вероятность выпадения осадков: 99%"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/wind"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/wind_image_viewpager" />
            </FrameLayout>

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Ветер 15 м/с, порывы до 30 м/с" />

            <TextView
                android:id="@+id/windDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Направление ветра: СЗ"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/sun"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/sun_image_viewpager" />
            </FrameLayout>

            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Время восхода солнца: 09.00.00" />

            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Время заката солнца: 16.00.00" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>